Added a second kind of note 'sustain'

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             .box.active{
                 background-color: black;
             }
+            .box.sustain{
+                background-color:skyblue;
+            }
             .box.playing{
                 background-color: pink;
             }
